force-app/main/default/objects/Integration_Definition__mdt/fields/Adapter_Class__c.field-meta.xml
<CustomField>
    <fullName>Adapter_Class__c</fullName>
    <label>Adapter Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>