force-app/main/default/objects/Integration_Definition__mdt/fields/Settings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Settings_JSON__c</fullName>
    <label>Settings JSON</label>
    <type>TextArea</type>
</CustomField>